--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 image:
   repository: "ZombieRebel"
-  tag: "v1.0.3-e884764-arm64"
+  tag: VERSION
   arch: amd64
 secret:
   name: "kbot"
