--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,6 +25,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build&Push
+        env:
+          APP: "kbot"
+          REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: make image push TARGETARCH=$TARGETARCH
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -33,17 +39,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      
-      - name: Build&Push
-        env:
-          APP: "kbot"
-          REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: make image push TARGETARCH=$TARGETARCH
-
       - name: Build&Push To Ghcr.io
         env:
           APP: "kbot"
-          REGISTRY: ${{ github.actor }}
+          REGISTRY: ghcr.io
         run: make image push TARGETARCH=$TARGETARCH
 
       - name: Clean
