Fix github repo to lowercase 4

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,10 +39,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: set lower case owner name
+        run: echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
+
       - name: Build&Push To Ghcr.io
         env:
           APP: "kbot"
-        run: make image push TARGETARCH=$TARGETARCH REGISTRY=ghcr.io/${{ github.actor,, }}
+        run: make image push TARGETARCH=$TARGETARCH REGISTRY=ghcr.io/$OWNER_LC
 
       - name: Clean
         run: make clean TARGETARCH=$TARGETARCH
